Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -266,10 +266,9 @@
      "output_type": "stream",
      "text": [
       "1.  True\n",
-      "Hunger is being relieved\n",
       "2.  Wow, that really hit the spot! I am so full, but more importantly, I'm not hangry anymore!\n",
-      "3.  False\n",
-      "4.  Oh, I don't think I can eat another bite. Thank you, though!\n"
+      "3.  True\n",
+      "4.  Wow, that really hit the spot! I am so full, but more importantly, I'm not hangry anymore!\n"
      ]
     }
    ],
@@ -283,7 +282,8 @@
     "        else:\n",
     "            return \"Oh, I don't think I can eat another bite. Thank you, though!\"\n",
     "    \n",
-    "    def relieve_hunger(self):\n",
+    "    def relieve_hunger(self): \n",
+    "        #return \"Hunger is being relieved\"\n",
     "        print(\"Hunger is being relieved\")\n",
     "        self.hungry = False\n",
     "\n",
@@ -334,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
